--- a/examples/config.json
+++ b/examples/config.json
@@ -2,24 +2,13 @@
     "airdata": {
         "pitot_calibrate_factor": 1.0
     },
-    "ekf": {
-	"select": "nav15",
-        "sig_w_accel": 0.05,
-        "sig_w_gyro": 0.00175,
-        "sig_a_d": 0.01,
-        "tau_a": 100.0,
-        "sig_g_d": 0.00025,
-        "tau_g": 50.0,
-        "sig_gps_p_ne": 3.0,
-        "sig_gps_p_d": 6.0,
-        "sig_gps_v_ne": 1.0,
-        "sig_gps_v_d": 3.0,
-        "sig_mag": 0.3            
-    },
     "imu": {
 	"calibration": {
 	    "include": "imu-calibration.json"
 	}
+    },
+    "nav": {
+        "include": "nav.json"
     },
     "pilot_input": {
         "channel": [
