Initial support for airdata (but without ardupilot parameter config support.)

--- a/examples/config.json
+++ b/examples/config.json
@@ -82,5 +82,8 @@
         "pilot_tune": {
             "enable": "True"
         }
+    },
+    "switches": {
+        "include": "switches.json"
     }
 }
