Updated for configurable comms links.

--- a/examples/gimbal/config.json
+++ b/examples/gimbal/config.json
@@ -16,6 +16,9 @@
     "airdata": {
         "pitot_calibrate_factor": 1.0
     },
+    "comms": {
+	"include": "comms.json"
+    },
     "imu": {
 	"calibration": {
 	    "include": "imu-calibration.json"
